<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/navigation_material_disease"
        android:icon="@drawable/icon_information"
        android:title="@string/menu_material" />

    <item
        android:id="@+id/navigation_detection"
        android:title="@string/menu_detect" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/icon_history"
        android:title="@string/menu_history" />

    <item
        android:id="@+id/navigation_guide"
        android:icon="@drawable/icon_info"
        android:title="@string/menu_guide" />
</menu>
