<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.android.cornleafdetection.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_materialDiseaseFragment"
            app:destination="@id/navigation_material_disease" />

        <action
            android:id="@+id/action_homeFragment_to_scanFragment"
            app:destination="@id/navigation_detection" />
    </fragment>

    <fragment
        android:id="@+id/navigation_material_disease"
        android:name="com.android.cornleafdetection.ui.information.DiseaseInformationFragment"
        android:label="@string/menu_material"
        tools:layout="@layout/fragment_material_disease">
        <action
            android:id="@+id/action_materialDiseaseFragment_to_homeFragment"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_detection"
        android:name="com.android.cornleafdetection.ui.detection.classification.ClassificationFragment"
        android:label="@string/menu_detect"
        tools:layout="@layout/fragment_classification">
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.android.cornleafdetection.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_guide"
        android:name="com.android.cornleafdetection.ui.about.AboutFragment"
        android:label="@string/menu_guide"
        tools:layout="@layout/fragment_about" />
</navigation>